--- a/Presentacion/Intro/Intro.tex
+++ b/Presentacion/Intro/Intro.tex
@@ -22,7 +22,7 @@
     \tikz[na]{\node[coordinate] (n1){};}
     \centering
     \begin{block}{Vidrio}
-      \centering Estructura amorfa
+      \centering Estructura amorfa (\scriptsize{Sílice - SiO$_{2}$}\normalsize{)}
       
       \vspace{0.2cm}
       \includegraphics[width=3cm]{Cap_1/500px-Silica.png}
@@ -110,8 +110,8 @@
             \end{itemize}
             }}
 \desventaja{1}{{\begin{itemize}
-		\item Alto costo y grandes limitaciones de fabricaci\'on
 		\item Gran p\'erdida de ductilidad ante la aparici\'on de bandas de corte
+		\item Alto costo y grandes limitaciones de fabricaci\'on
 	      \end{itemize}
 	      }}
             
@@ -147,6 +147,32 @@
   \end{textblock*}
 \end{frame}
 
+\begin{frame}
+ \frametitle{Mec\'anica de deformaci\'on}
+ \begin{textblock*}{11.8cm}(0.5cm,1.8cm)
+  \begin{block}{Bandas de corte}
+  Concentraci\'on de deformaci\'on en bandas estrechas, llamadas \textbf{bandas de corte}.
+  El crecimiento de estas bandas puede causar la fractura fr\'agil del material (Schuh et al, 2007).
+  \end{block}
+ \end{textblock*}
+ \vspace{-0.7cm}
+ \begin{textblock*}{\textwidth}(1cm,4.3cm)
+  \begin{figure}
+  \centering
+  \includegraphics[width=5.5cm]{Cap_1/shearbands.png}
+  \end{figure}
+ \end{textblock*}
+\begin{textblock*}{\textwidth}(1cm,8.2cm)
+ \centering
+ \scriptsize{Muestra de BMG bajo tracci\'on uniaxial. Adaptado de Albe et al, 2013}
+\end{textblock*}
+
+ \begin{textblock*}{12.6cm}(0.5cm,8.9cm)
+ \scriptsize{Schuh, C., Hufnagel, T., and Ramamurty, U., \textit{Acta. Mater.}, \textbf{55(12)}, 4067-4109 (2007)} \\
+ \scriptsize{Albe, K., Ritter, Y., and Şopu, D., \textit{Mech. Mater.}, \textbf{67}, 94–103 (2013)}
+ \end{textblock*}
+
+\end{frame}
 
 \begin{frame}
  \frametitle{Aplicaciones}
@@ -186,39 +212,12 @@
 \end{frame}
 
 \begin{frame}
- \frametitle{Mec\'anica de deformaci\'on}
- \begin{textblock*}{11.8cm}(0.5cm,1.8cm)
-  \begin{block}{Bandas de corte}
-  Concentraci\'on de deformaci\'on en bandas estrechas, llamadas \textbf{bandas de corte}.
-  El crecimiento de estas bandas puede causar la fractura fr\'agil del material (Schuh et al, 2007).
-  \end{block}
- \end{textblock*}
- \vspace{-0.7cm}
- \begin{textblock*}{\textwidth}(1cm,4.3cm)
-  \begin{figure}
-  \centering
-  \includegraphics[width=5.5cm]{Cap_1/shearbands.png}
-  \end{figure}
- \end{textblock*}
-\begin{textblock*}{\textwidth}(1cm,8.2cm)
- \centering
- \scriptsize{Muestra de BMG bajo tracci\'on uniaxial. Adaptado de Albe et al, 2013}
-\end{textblock*}
-
- \begin{textblock*}{12.6cm}(0.5cm,8.9cm)
- \scriptsize{Schuh, C., Hufnagel, T., and Ramamurty, U., \textit{Acta. Mater.}, \textbf{55(12)}, 4067-4109 (2007)} \\
- \scriptsize{Albe, K., Ritter, Y., and Şopu, D., \textit{Mech. Mater.}, \textbf{67}, 94–103 (2013)}
- \end{textblock*}
-
-\end{frame}
-
-\begin{frame}
  \frametitle{Objetivos}
  %\vspace{0.5cm}
 \begin{itemize}
  \item Investigar el comportamiento en r\'egimen elasto-pl\'astico en grandes deformaciones de un metal amorfo binario a diferentes temperaturas
  \begin{itemize}
-  \item Estudiar el comportamiento de las \textbf{bandas de corte} y buscar posibles soluciones para evitar o retardar la falla fr\'agil
+  \item Tensión-deformación, parámetros constitutivos, dependencia con la temperatura.
  \end{itemize}
  \item Investigar los efectos de cambios en la composici\'on sobre las propiedades mec\'anicas
  \begin{itemize}
