--- a/Presentacion/Nanoglass/Nanoglass.tex
+++ b/Presentacion/Nanoglass/Nanoglass.tex
@@ -142,6 +142,9 @@
         El resultado es contra-intuitivo.\\%Hay plasticidad pero los poliedros de Voronoi pr\'acticamente no cambian.\\
         Posible que hayan otros procesos involucrados.
     \end{textblock*}
+    \begin{textblock*}{12cm}(0.5cm,9cm) % {block width} (coords)
+        \scriptsize{Arman B., Luo S.-N., Germann T.C. and Cağin T., \textit{Phys. Rev. B.}, \textbf{81}, 144201 (2010)}
+    \end{textblock*}
 \end{frame}
 
 \begin{frame}
@@ -162,7 +165,7 @@
     \begin{textblock*}{11cm}(1cm,7.1cm)
       \centering
         %Los poros act\'uan como concentradores de tensiones.\\
-        Los poros impiden la propagaci\'on de bandas de corte.\\
+        Los poros retrasan la propagaci\'on de bandas de corte.\\
         Bandas de corte nuclean diagonalmente en el espacio entre poros.
     \end{textblock*}
 \end{frame}
