--- a/Presentacion/Nanoparticles/Nanoparticles.tex
+++ b/Presentacion/Nanoparticles/Nanoparticles.tex
@@ -40,7 +40,7 @@
   \vspace{0.5cm}
   \item Impacto en el comportamiento mec\'anico de la muestra (cambios en curvas tensi\'on-deformaci\'on)
   \vspace{0.5cm}
-  \item Distribuci\'on de la tensi\'on de corte en la muestra.
+  \item Distribuci\'on de la deformaci\'on at\'omica de la muestra.
  \end{itemize}
 \end{frame}
 
