--- a/Presentacion/presentacion.tex
+++ b/Presentacion/presentacion.tex
@@ -30,7 +30,7 @@
 \title[Estudio de un Metal Amorfo]{Estudio Termo - Mec\'anico de un Metal Amorfo}
 \subtitle{Simulaciones Atom\'isticas}
 \author[Ardiani, Manelli]{Franco Ardiani, Andr\'es A. Manelli}
-\institute[UNCUYO]{Facultad de Ingenier\'ia, Universidad Nacional de Cuyo}
+\institute[UNCUYO]{\textbf{Director}: Claudio A. Careglio. \textbf{Co-Director}: Eduardo M. Bringa\\\\\\\\\\Facultad de Ingenier\'ia, Universidad Nacional de Cuyo}
 \date{12 de febrero de 2016}
 
 \addtobeamertemplate{frametitle}{\vskip-0.14ex}{} % junta frametitle con la barra de contenidos
