--- a/Presentacion/Intro/Intro.tex
+++ b/Presentacion/Intro/Intro.tex
@@ -227,3 +227,21 @@
 \end{itemize}
 \end{frame}
 
+\begin{frame}
+ \frametitle{Metodología}
+ %\vspace{0.5cm}
+ \begin{block}{Simulaciones Din\'amica Molecular (MD)}
+  Resuelve ecuaciones de Newton para un sistema de N mol\'eculas que interact\'uan seg\'un una funci\'on potencial
+ \end{block}
+ \begin{textblock*}{12cm}(1.1cm,4.9cm)
+  Proceso de simulación:
+  \begin{enumerate}
+   \item Pre-procesamiento de la muestra.
+   \item Preparación del script de simulación para LAMMPS.
+   \item Secuenciación de tareas.
+   \item Ejecución de LAMMPS.
+   \item Generación de gráficas ''publication-ready''.
+   \item Análisis estadístico, de Voronoi, y visual.
+  \end{enumerate}
+ \end{textblock*}
+\end{frame}
