--- a/Presentacion/Nanoglass/Nanoglass.tex
+++ b/Presentacion/Nanoglass/Nanoglass.tex
@@ -36,7 +36,7 @@
     \vspace{0cm}
     \begin{enumerate}
         \item Ubicaci\'on aleatoria de part\'iculas de 2.5 nm de radio.
-        \item Relajaci\'on @ 650K (volumen constante, pocos ps). 
+        \item Estabilización a 650K (volumen constante, pocos ps). 
         \item Hasta 10 ps de compresi\'on (400 bar).
         \item Se repiten los dos pasos anteriores.
         \item M\'as relajaci\'on: enfriado a temperatura 0, bar\'ostato a presi\'on 0, calentado hasta temperatura de simulaci\'on y bar\'ostato a presi\'on 0 (5 ps, temperatura constante)
@@ -104,7 +104,7 @@
   \begin{textblock*}{\textwidth}(1cm,7.7cm)
   \centering
   Fracci\'on de volumen s\'olido vs deformaci\'on.\\
-  El uso de condiciones peri\'odicas evita el cierre de poros en tracci\'on.
+  El uso de condiciones peri\'odicas evita el cierre de poros en tracci\'on
  \end{textblock*}
 \end{frame}
 
@@ -126,7 +126,7 @@
         Luego del colapso de los poros hay un endurecimiento significativo. %Indicar que todas las curvas son iguales
     \end{textblock*}
     \begin{textblock*}{12cm}(0.6cm,8.5cm) % {block width} (coords)
-        A mayor porosidad $\rightarrow$ menor esfuerzo para cerrar los poros
+        A mayor porosidad $\rightarrow$ menor esfuerzo para cerrar los poros.
     \end{textblock*}
 \end{frame}
 
@@ -139,7 +139,7 @@
         La ca\'ida en el n\'umero de \'atomos de Tipo 3 luego de una etapa constante ha sido considerada como un indicador del inicio de la plasticidad (Arman, 2010).
     \end{textblock*}
     \begin{textblock*}{4.8cm}(0.5cm,6.5cm)
-        El resultado es contra-intuitivo.\\%Hay plasticidad pero los poliedros de Voronoi pr\'acticamente no cambian.\\
+        El resultado es diferente al esperado.\\%Hay plasticidad pero los poliedros de Voronoi pr\'acticamente no cambian.\\
         Posible que hayan otros procesos involucrados.
     \end{textblock*}
     \begin{textblock*}{12cm}(0.5cm,9cm) % {block width} (coords)
@@ -166,7 +166,7 @@
       \centering
         %Los poros act\'uan como concentradores de tensiones.\\
         Los poros retrasan la propagaci\'on de bandas de corte.\\
-        Bandas de corte nuclean diagonalmente en el espacio entre poros.
+        Bandas de corte nuclean diagonalmente en el espacio entre poros
     \end{textblock*}
 \end{frame}
 
@@ -183,7 +183,7 @@
     \begin{textblock*}{11.5cm}(0.5cm,7.8cm) % {block width} (coords)
 	\centering
         Flujo pl\'astico.\\
-        El uso de condiciones de borde peri\'odicas evita el cierre de poros (no hay estricci\'on).
+        El uso de condiciones de borde peri\'odicas evita el cierre de poros (no hay estricci\'on)
     \end{textblock*}
 \end{frame}
 
@@ -204,7 +204,7 @@
     \end{textblock*}
     \begin{textblock*}{11.5cm}(1cm,8.5cm) % {block width} (coords)
     \centering
-	La deformaci\'on cortante se concentra principalmente alrededor de los poros.
+	La deformaci\'on cortante se concentra principalmente alrededor de los poros
 %            \item Relative position between atoms remains almost the same.
     \end{textblock*}
 \end{frame}
@@ -225,7 +225,7 @@
     \begin{textblock*}{12cm}(0.4cm,7.9cm) % {block width} (coords)
     \centering
 	Se facilita el movimiento de \'atomos alrededor de los poros.\\
-	Esto evita la formaci\'on de STZ fuera de los alrededores de los poros.
+	Esto evita la formaci\'on de STZ fuera de los alrededores de los poros
     \end{textblock*}
 \end{frame}
 
@@ -297,7 +297,7 @@
  
  \begin{textblock*}{10cm}(1.2cm,8cm)
   \centering
-  Cambia la forma de los poros (disposiciones de menor energía).
+  Cambia la forma de los poros (disposiciones de menor energía)
  \end{textblock*}
 
     %\caption[Comparación de muestras con velocidades de enfriamiento/calentamiento distintas (porosidad 13\%)]{Estado inicial de las muestras generadas con velocidades de enfriamiento/calentamiento diferentes, para el caso de porosidad 13\%.}
@@ -356,7 +356,7 @@
  
  \begin{textblock*}{10cm}(1.2cm,8cm)
   \centering
-  La distribución de poros es aleatoria.
+  La distribución de poros es aleatoria
  \end{textblock*}
 
     %\caption[Comparación de muestras con velocidades de enfriamiento/calentamiento distintas (porosidad 13\%)]{Estado inicial de las muestras generadas con velocidades de enfriamiento/calentamiento diferentes, para el caso de porosidad 13\%.}
