Conclusiones y Trabajos Futuros

--- a/Presentacion/Conclusiones/Conclusiones.tex
+++ b/Presentacion/Conclusiones/Conclusiones.tex
@@ -3,8 +3,31 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \section{Conclusiones}
-%\subsection{Conclusiones}
+\subsection{Conclusiones}
 
 \begin{frame}
- 
+  \frametitle{CONCLUSIONES}
+ \begin{itemize} 
+  \item Se estudia una matriz de MG y se modifica su composición mediante simulaciones de MD.
+  \vspace{0.2cm}
+  \item Se caracteriza una muestra y se estudia el impacto de los cambios nombrados en la respuesta mecánica.
+  \vspace{0.2cm}
+  \item Para lograr lo anterior, se aprende a realizar simulaciones de MD.
+  \vspace{0.2cm}
+  \item Se presentan tres publicaciones: MECOM 2012 (1) y PANACM 2015 (2).
+  \vspace{0.2cm}
+  \item Se trabaja sobre la comunicación de resultados bajo diferentes requerimientos.
+ \end{itemize}
+\end{frame}
+
+\begin{frame}
+ \frametitle{Trabajos futuros}
+ \vspace{0.5cm}
+ \begin{itemize}
+  \item Generar y estudiar muestras a menores velocidades de enfriamiento y velocidad de deformación.
+  \vspace{0.5cm}
+  \item Estudiar muestras de mayor tamaño (mayor cantidad de nanopartículas y diferentes topologías de poros).
+  \vspace{0.5cm}
+  \item Llevar propiedades del estudio nano a códigos de elementos finitos para estudiar piezas de mayor tamaño.
+ \end{itemize}
 \end{frame}
