--- a/Presentacion/presentacion.tex
+++ b/Presentacion/presentacion.tex
@@ -2,7 +2,7 @@
 
 \graphicspath{{../Figures/}}
 
-\usepackage[latin1]{inputenc} 
+\usepackage[utf8]{inputenc} 
 \usepackage[T1]{fontenc}
 \usepackage{lmodern}
 \usepackage{graphicx}
@@ -62,13 +62,13 @@
 %\section{Bibliografía}
 %\begin{frame}
 %  \tiny{\bibliographystyle{apalike}}
-  \bibliography{../Bibliography}
+  %\bibliography{../Bibliography}
 %\end{frame}
 
 %%%
 % Slide de titulo
 %%%
-
+\section{}
 \maketitle
 
 \end{document}
