cambios menores hyperref

--- a/main.tex
+++ b/main.tex
@@ -181,7 +181,7 @@
 %----------------------------------------------------------------------------------------
 %	ABSTRACT PAGE
 %----------------------------------------------------------------------------------------
-
+\hypersetup{linkcolor=black}
 \cleardoublepage
 
 \addtotoc{Resumen} % Add the "Abstract" page entry to the Contents
@@ -238,7 +238,7 @@ Asimismo, se agradece a la Secretaría de Ciencia, Técnica y Postgrado (SeCTyP)
 
 \lhead{\emph{List of Tables}} % Set the left side page header to "List of Tables"
 \listoftables % Write out the List of Tables
-
+\hypersetup{linkcolor=blue}
 %----------------------------------------------------------------------------------------
 %	ABBREVIATIONS
 %----------------------------------------------------------------------------------------
