ultimos detalles de presentacion

--- a/Presentacion/Conclusiones/Conclusiones.tex
+++ b/Presentacion/Conclusiones/Conclusiones.tex
@@ -8,17 +8,36 @@
 \begin{frame}
   \frametitle{CONCLUSIONES}
  \begin{itemize} 
-  \item Se estudia una matriz de MG y se modifica su composición mediante simulaciones de MD.
+  \item Comportamiento razonable ante el aumento de temperatura. Se puede aproximar con un decaimiento exponencial.
   \vspace{0.2cm}
-  \item Se caracteriza una muestra y se estudia el impacto de los cambios nombrados en la respuesta mecánica.
+  \item Se observan bandas de corte al visualizar con deformación atómica, más evidentes con condiciones de frontera libre.
   \vspace{0.2cm}
-  \item Para lograr lo anterior, se aprende a realizar simulaciones de MD.
-  \vspace{0.2cm}
-  \item Se presentan tres publicaciones: MECOM 2012 (1) y PANACM 2015 (2).
-  \vspace{0.2cm}
-  \item Se trabaja sobre la comunicación de resultados bajo diferentes requerimientos.
+  \item Analizamos los efectos de la temperatura sobre nanopartículas embebidas, indicando estabilidad debajo de 400 K. A temperaturas más elevadas, se pierde la frontera nítida cristal/amorfo.
  \end{itemize}
 \end{frame}
+
+\begin{frame}
+  \frametitle{CONCLUSIONES}
+ \begin{itemize}
+  \item Las curvas tensión-deformación de la matriz con inclusión son muy similares al caso sin nanopartícula, pero existe un retardo en la nucleación de poros bajo tracción.
+  \vspace{0.2cm}
+  \item Muestra porosa bajo compresión: los poros concentran tensiones pero también retrasan la nucleación de SBs.
+  \vspace{0.2cm}
+  \item Muestra porosa bajo tracción: los poros no se cierran y facilitan el movimiento de átomos a su alrededor, impidiendo la formación de STZs y SBs.
+ \end{itemize}
+\end{frame}
+
+\begin{frame}
+ \frametitle{PRESENTACIONES EN CONGRESOS}
+ \begin{itemize}
+  \item Trabajo completo publicado y presentado en el X Congreso Argentino de Mecánica Computacional (MECOM 2012)
+  \vspace{0.2cm}
+  \item Dos trabajos completos publicados y presentados en el I Congreso Panamericano de Mecánica Computacional (PANACM 2015)
+ \end{itemize}
+  \vspace{0.5cm}
+  Además, se presentaron posters de estudiantes en el X Congreso Argentino de Mecánica Computacional (MECOM 2012) 
+\end{frame}
+
 
 \begin{frame}
  \frametitle{Trabajos futuros}
