--- a/Presentacion/Intro/Intro.tex
+++ b/Presentacion/Intro/Intro.tex
@@ -213,7 +213,7 @@
 
 \begin{frame}
  \frametitle{Objetivos}
- %\vspace{0.5cm}
+ \vspace{0.5cm}
 \begin{itemize}
  \item Investigar el comportamiento en r\'egimen elasto-pl\'astico en grandes deformaciones de un metal amorfo binario a diferentes temperaturas
  \begin{itemize}
@@ -223,8 +223,12 @@
  \begin{itemize}
   \item Generar muestras modificadas: porosidad variable e inclusiones cristalinas
  \end{itemize}
- \item Resumir el know-how adquirido en un documento que permita una incorporación más rápida al proyecto.
 \end{itemize}
+\end{frame}
+
+\begin{frame}
+ \frametitle{Metodología}
+ 
 \end{frame}
 
 \begin{frame}
