fit 2 tercios corrección

--- a/Presentacion/Carac/Carac.tex
+++ b/Presentacion/Carac/Carac.tex
@@ -157,7 +157,7 @@
  \begin{textblock*}{7cm}(0.5cm,1.4cm)
   \begin{figure}[htp]
       \centering
-      \includegraphics[width=7cm]{Presentacion_Mecom_2012/Fit2_Tercios.png}
+      \includegraphics[width=7cm]{Cap_3/Fit2_Tercios.png}
   \end{figure}
  \end{textblock*}
  \begin{textblock*}{4.5cm}(8cm,2.5cm)
@@ -172,7 +172,7 @@
       \end{itemize}
       \footnotesize{(Johnson y Samwer, 2005)}
   \end{textblock*}
-  \begin{textblock*}{5cm}(2cm,6.5cm)
+  \begin{textblock*}{5cm}(2cm,7.5cm)
     \scriptsize{Esfuerzo de fluencia vs. temperatura}
   \end{textblock*}
   \begin{textblock*}{12cm}(0.5cm,8.5cm) % {block width} (coords)
