--- a/Presentacion/Nanoglass/Nanoglass.tex
+++ b/Presentacion/Nanoglass/Nanoglass.tex
@@ -38,8 +38,8 @@
         \item Ubicaci\'on aleatoria de part\'iculas de 2.5 nm de radio.
         \item Estabilización a 650K (volumen constante, pocos ps). 
         \item Hasta 10 ps de compresi\'on (400 bar).
-        \item Se repiten los dos pasos anteriores.
-        \item M\'as relajaci\'on: enfriado a temperatura 0, bar\'ostato a presi\'on 0, calentado hasta temperatura de simulaci\'on y bar\'ostato a presi\'on 0 (5 ps, temperatura constante)
+        \item Repetición pasos 2 y 3 $\rightarrow$ \textbf{Extracción}
+        \item M\'as relajaci\'on: temple a temperatura 0, disminución de presi\'on a 0, calentamiento hasta 300K y reducción de presi\'on a 0. Cambios de T: $6.5 \cdot 10^{14} K/s$.
         \begin{textblock*}{3cm}(2.5cm,6.5cm) % {block width} (coords)
             \includegraphics[width=3cm]{Cap_5/spheres2.png}
         \end{textblock*}
