--- a/Presentacion/presentacion.tex
+++ b/Presentacion/presentacion.tex
@@ -2,7 +2,7 @@
 
 \graphicspath{{../Figures/}}
 
-\usepackage[utf8]{inputenc} 
+\usepackage[latin1]{inputenc} 
 \usepackage[T1]{fontenc}
 \usepackage{lmodern}
 \usepackage{graphicx}
