--- a/Presentacion/Intro/Intro.tex
+++ b/Presentacion/Intro/Intro.tex
@@ -228,7 +228,11 @@
 
 \begin{frame}
  \frametitle{Metodología}
- 
+ \begin{figure}
+  \centering
+  \includegraphics[width=10cm]{Presentacion/multiescala.png}
+ \end{figure}
+
 \end{frame}
 
 \begin{frame}
