--- a/Presentacion/Carac/Carac.tex
+++ b/Presentacion/Carac/Carac.tex
@@ -98,7 +98,7 @@
    \end{textblock*}
    \begin{textblock*}{4.8cm}(7.7cm,5cm)
    \centering
-    $y=A_1^{(-T/T_0)}$
+    $y=A_1\cdot e^{(-T/T_0)}$
     \end{textblock*}
   \begin{textblock*}{4.8cm}(7.7cm,6cm)
   \centering
@@ -179,6 +179,17 @@
     \scriptsize{Cheng Y.Q. and Ma E., \textit{Acta Mater.}, \textbf{59}, 1800-1807 (2011).\\
     Johnson W.L., Samwer K., \textit{Phys. Rev. Lett.}, \textbf{95}, 195501 (2005).}
   \end{textblock*}
+  \begin{textblock*}{5cm}(8.2cm,7.2cm)
+    \begin{table}[htp]
+    \begin{center}
+    \begin{tabular}{c c}
+    \hline
+    \scriptsize{Tracci\'on} & \scriptsize{0.972} \\ \hline
+    \scriptsize{Compresión} & \scriptsize{0.985} \\ \hline
+    \end{tabular}
+    \end{center}
+    \end{table}
+  \end{textblock*}
 \end{frame}
 
 \begin{frame}
@@ -224,13 +235,15 @@
   \end{textblock*}
   \begin{textblock*}{5cm}(0.5cm,3cm)
    \centering
-   La escala de colores representa deformaci\'on at\'omica
+   La escala de colores representa deformaci\'on at\'omica (Shimizu, 2007)
   \end{textblock*}
   \begin{textblock*}{5cm}(0.5cm,5.5cm)
    \centering
    Hay bandas de corte incipientes que se forman con una direcci\'on predominantemente diagonal
   \end{textblock*}
-  
+    \begin{textblock*}{12cm}(0.5cm,9cm) % {block width} (coords)
+        \scriptsize{Shimizu, F., Ogata, S., and Li, J. (2007). \textit{Mater. Trans.}, \textbf{48}(11):2923-2927.}
+    \end{textblock*}  
 \end{frame}
 
 \begin{frame}
