--- a/Presentacion/Conclusiones/Conclusiones.tex
+++ b/Presentacion/Conclusiones/Conclusiones.tex
@@ -7,10 +7,11 @@
 
 \begin{frame}
   \frametitle{CONCLUSIONES}
+  \vspace{0.2cm}
  \begin{itemize} 
   \item Comportamiento razonable ante el aumento de temperatura. Se puede aproximar con un decaimiento exponencial.
   \vspace{0.2cm}
-  \item Se observan bandas de corte al visualizar con deformación atómica, más evidentes con condiciones de frontera libre.
+  \item Se observan bandas de corte, las cuales son más evidentes con condiciones de frontera libre.
   \vspace{0.2cm}
   \item Analizamos los efectos de la temperatura sobre nanopartículas embebidas, indicando estabilidad debajo de 400 K. A temperaturas más elevadas, se pierde la frontera nítida cristal/amorfo.
  \end{itemize}
@@ -18,6 +19,7 @@
 
 \begin{frame}
   \frametitle{CONCLUSIONES}
+  \vspace{0.2cm}
  \begin{itemize}
   \item Las curvas tensión-deformación de la matriz con inclusión son muy similares al caso sin nanopartícula, pero existe un retardo en la nucleación de poros bajo tracción.
   \vspace{0.2cm}
@@ -29,6 +31,7 @@
 
 \begin{frame}
  \frametitle{PRESENTACIONES EN CONGRESOS}
+ \vspace{0.2cm}
  \begin{itemize}
   \item Trabajo completo publicado y presentado en el X Congreso Argentino de Mecánica Computacional (MECOM 2012)
   \vspace{0.2cm}
