--- a/Presentacion/Nanoparticles/Nanoparticles.tex
+++ b/Presentacion/Nanoparticles/Nanoparticles.tex
@@ -241,7 +241,7 @@
   \end{textblock*}
   \begin{textblock*}{12cm}(0.5cm,8.5cm) 
     \centering
-      \small{Inclusi\'on de Cu-FCC bajo tracci\'on a 10K según deformaci\'on cortante. De izquierda a derecha: $\epsilon$ = 16.66 \%, 16.68 \% y 16.70 \%.}
+      \small{Inclusi\'on de Cu-FCC bajo tracci\'on a 10K según deformaci\'on atómica. De izquierda a derecha: $\epsilon$ = 16.66 \%, 16.68 \% y 16.70 \%.}
     \end{textblock*}
     
    \only<2>{
@@ -263,7 +263,7 @@
   \end{textblock*}
   \begin{textblock*}{12cm}(0.5cm,8.5cm) 
     \centering
-      \small{Inclusi\'on de Cu-FCC bajo compresi\'on a 10K según deformaci\'on cortante. De izquierda a derecha: $\epsilon$ = 16.74 \%, 16.86 \% y 16.92 \%.}
+      \small{Inclusi\'on de Cu-FCC bajo compresi\'on a 10K según deformaci\'on atómica. De izquierda a derecha: $\epsilon$ = 16.74 \%, 16.86 \% y 16.92 \%.}
     \end{textblock*}
 \end{frame}
 
@@ -277,7 +277,7 @@
   \end{textblock*}
   \begin{textblock*}{12cm}(0.5cm,8.5cm) 
     \centering
-      \small{Inclusión de CuZr-B2 bajo tracción a 10K según deformación cortante. De izquierda a derecha: $\epsilon$ = 16.66 \%, 16.68 \% y 16.70 \%.}
+      \small{Inclusión de CuZr-B2 bajo tracción a 10K según deformación atómica. De izquierda a derecha: $\epsilon$ = 16.66 \%, 16.68 \% y 16.70 \%.}
     \end{textblock*}
 \end{frame}
 
@@ -291,7 +291,7 @@
   \end{textblock*}
   \begin{textblock*}{12cm}(0.5cm,8.5cm) 
     \centering
-      \small{Inclusión de CuZr-B2 bajo compresión a 10K según deformación cortante. De izquierda a derecha: $\epsilon$ = 16.74 \%, 16.86 \% y 16.92 \%.}
+      \small{Inclusión de CuZr-B2 bajo compresión a 10K según deformación atómica. De izquierda a derecha: $\epsilon$ = 16.74 \%, 16.86 \% y 16.92 \%.}
     \end{textblock*}
 \end{frame}
 
