--- a/Presentacion/Intro/Intro.tex
+++ b/Presentacion/Intro/Intro.tex
@@ -219,6 +219,7 @@
  \begin{itemize}
   \item Tensión-deformación, parámetros constitutivos, dependencia con la temperatura.
  \end{itemize}
+ \vspace{0.3cm}
  \item Investigar los efectos de cambios en la composici\'on sobre las propiedades mec\'anicas
  \begin{itemize}
   \item Generar muestras modificadas: porosidad variable e inclusiones cristalinas
