Slides de intro para Nanoparticles y Nanoglass

--- a/Presentacion/Nanoglass/Nanoglass.tex
+++ b/Presentacion/Nanoglass/Nanoglass.tex
@@ -10,7 +10,21 @@
 
 \begin{frame}
     \frametitle{Introducci\'on}
-    \vspace{0.2cm}
+    \begin{textblock*}{12.6cm}(0cm,1.2cm)
+    \begin{figure}
+    \centering
+    \includegraphics[width=11cm]{Presentacion/modifications_B.png}
+    \end{figure}
+  \end{textblock*}
+    \begin{textblock*}{4cm}(0.5cm,6cm)
+      \begin{figure}
+      \centering
+      \includegraphics[width=3.5cm]{Presentacion/porous.png}
+      \end{figure}
+    \end{textblock*}
+    \begin{textblock*}{7.2cm}(4.5cm,8.4cm)
+      \scriptsize{Wang, J., Hodgson, P., Zhang, J., Yan, W., and Yang, C., \textit{Comput. Mater. Sci.}, \textbf{50}, 211-217 (2010)}
+    \end{textblock*}
 %    \begin{itemize}
 %        \item Metallic Glass: amorphous metal (without crystalline order).
 %        \item Has advantages over crystalline metals, like elasticity combined with high resistance, strength and moldability.
@@ -18,13 +32,13 @@
 %        \item Shear bands may lead to brittle failure (heterogeneous deformation): importance of \textbf{preventing their propagation}.
 %        \item A more homogeneous deformation may be achieved by adding \textbf{porosity}.
 %    \end{itemize} 
-    \begin{block}{Problem\'atica}
-      Las bandas de corte pueden ocasionar la falla fr\'agil del material (deformaci\'on heterog\'enea).
-    \end{block}
-    \begin{block}{Posible soluci\'on}
-     Una deformaci\'on m\'as homog\'enea puede lograrse al agregar porosidad.\\
-     Similar al bloqueo del deslizamiento en metales cristalinos.
-    \end{block}
+%     \begin{block}{Problem\'atica}
+%       Las bandas de corte pueden ocasionar la falla fr\'agil del material (deformaci\'on heterog\'enea).
+%     \end{block}
+%     \begin{block}{Posible soluci\'on}
+%      Una deformaci\'on m\'as homog\'enea puede lograrse al agregar porosidad.\\
+%      Similar al bloqueo del deslizamiento en metales cristalinos.
+%     \end{block}
 \end{frame}
 
 %%%
