--- a/Presentacion/Nanoparticles/Nanoparticles.tex
+++ b/Presentacion/Nanoparticles/Nanoparticles.tex
@@ -7,27 +7,33 @@
 
 \begin{frame}
   \frametitle{Introducci\'on}
-  \begin{itemize}
-   \item Para homogeneizar el r\'egimen pl\'astico y evitar la falla fr\'agil del material, la composici\'on se modifica de diferentes maneras
-  \end{itemize}
-  \begin{textblock*}{12.6cm}(-0.1cm, 3cm)  
-    \begin{figure}[htp]
-      \centering
-      \begin{tabular}{c}
-	\subfloat[Nanopart\'iculas (Albe et al, 2013)]{
-		\includegraphics[width=5.7cm]{Presentacion/nanoparticles_example.png}
-		\label{P:fg:B2Crystal}}
-	\hspace{0.5cm}
-	\subfloat[Nanovidrios (Adibi et al, 2013)]{
-		\includegraphics[width=6cm]{Presentacion/nanoglass_example.png}
-		\label{P:fg:B2CrystalTest}}
-      \end{tabular}
+  \begin{textblock*}{12.6cm}(0cm,1.2cm)
+    \begin{figure}
+    \centering
+    \includegraphics[width=11cm]{Presentacion/modifications_A.png}
     \end{figure}
   \end{textblock*}
-  \begin{textblock*}{12cm}(0.5cm,8.5cm)
-  \scriptsize{Albe, K., Ritter, Y., and Şopu, D., \textit{Mech. Mater.}, \textbf{67}, 94–103 (2013). \\
-  Adibi, S., Sha, Z., Branicio, P., Joshi, S., Liu, Z., and Zhang, Y., \textit{Appl. Phys. Lett.}, \textbf{103}, 211905 (2013).\\
-  }
+
+%   \begin{itemize}
+%    \item Para homogeneizar el r\'egimen pl\'astico y evitar la falla fr\'agil del material, la composici\'on se modifica de diferentes maneras
+%   \end{itemize}
+%   \begin{textblock*}{12.6cm}(-0.1cm, 3cm)  
+%     \begin{figure}[htp]
+%       \centering
+%       \begin{tabular}{c}
+% 	\subfloat[Nanopart\'iculas (Albe et al, 2013)]{
+% 		\includegraphics[width=5.7cm]{Presentacion/nanoparticles_example.png}
+% 		\label{P:fg:B2Crystal}}
+% 	\hspace{0.5cm}
+% 	\subfloat[Nanovidrios (Adibi et al, 2013)]{
+% 		\includegraphics[width=6cm]{Presentacion/nanoglass_example.png}
+% 		\label{P:fg:B2CrystalTest}}
+%       \end{tabular}
+%     \end{figure}
+%   \end{textblock*}
+  \begin{textblock*}{4.5cm}(5.5cm,8.3cm)
+  \scriptsize{Albe, K., Ritter, Y., and Şopu, D., \textit{Mech. Mater.}, \textbf{67}, 94–103 (2013)}
+%   Adibi, S., Sha, Z., Branicio, P., Joshi, S., Liu, Z., and Zhang, Y., \textit{Appl. Phys. Lett.}, \textbf{103}, 211905 (2013).\\
   \end{textblock*}
 \end{frame}
 
