--- a/Presentacion/Nanoglass/Nanoglass.tex
+++ b/Presentacion/Nanoglass/Nanoglass.tex
@@ -180,34 +180,34 @@
         \centering
         \scriptsize{Deformaci\'on at\'omica.\\Porosidad 13\%, deformaci\'on 20\%.}
     \end{textblock*}
-    \begin{textblock*}{11.5cm}(0.5cm,7.8cm) % {block width} (coords)
+    \begin{textblock*}{11.5cm}(0.5cm,8.2cm) % {block width} (coords)
 	\centering
-        Flujo pl\'astico.\\
-        El uso de condiciones de borde peri\'odicas evita el cierre de poros (no hay estricci\'on)
+        %Flujo pl\'astico.\\
+        La deformaci\'on cortante se concentra principalmente alrededor de los poros
     \end{textblock*}
 \end{frame}
 
-\begin{frame}
-    \frametitle{Resultados (tracci\'on)}
-    \begin{textblock*}{12cm}(0.4cm,2cm) % {block width} (coords)
-        \includegraphics[width=4cm]{Presentacion_PANACM_Franco/13_0strain.png}
-        \includegraphics[width=4cm]{Presentacion_PANACM_Franco/13_6strain_tens.png}
-        \includegraphics[width=4cm]{Presentacion_PANACM_Franco/13_20strain_tens_2.png}
-    \end{textblock*}
-    \begin{textblock*}{12cm}(0.4cm,6.9cm)
-     \centering
-        \includegraphics[width=4cm]{Cap_5/escala.png}
-    \end{textblock*}
-    \begin{textblock*}{12cm}(0.5cm,7.7cm)
-        \centering
-        \scriptsize{Porosidad 13\%. $\epsilon=$ 0, 6 y 20\%, respectivamente.}
-    \end{textblock*}
-    \begin{textblock*}{11.5cm}(1cm,8.5cm) % {block width} (coords)
-    \centering
-	La deformaci\'on cortante se concentra principalmente alrededor de los poros
+%\begin{frame}
+%    \frametitle{Resultados (tracci\'on)}
+%    \begin{textblock*}{12cm}(0.4cm,2cm) % {block width} (coords)
+%        \includegraphics[width=4cm]{Presentacion_PANACM_Franco/13_0strain.png}
+%        \includegraphics[width=4cm]{Presentacion_PANACM_Franco/13_6strain_tens.png}
+%        \includegraphics[width=4cm]{Presentacion_PANACM_Franco/13_20strain_tens_2.png}
+%    \end{textblock*}
+%    \begin{textblock*}{12cm}(0.4cm,6.9cm)
+%     \centering
+%        \includegraphics[width=4cm]{Cap_5/escala.png}
+%    \end{textblock*}
+%    \begin{textblock*}{12cm}(0.5cm,7.7cm)
+%        \centering
+%        \scriptsize{Porosidad 13\%. $\epsilon=$ 0, 6 y 20\%, respectivamente.}
+%    \end{textblock*}
+%    \begin{textblock*}{11.5cm}(1cm,8.5cm) % {block width} (coords)
+%    \centering
+%	La deformaci\'on cortante se concentra principalmente alrededor de los poros
 %            \item Relative position between atoms remains almost the same.
-    \end{textblock*}
-\end{frame}
+%    \end{textblock*}
+%\end{frame}
 
 \begin{frame}
     \frametitle{Resultados (tracci\'on)}
