--- a/Presentacion/Carac/Carac.tex
+++ b/Presentacion/Carac/Carac.tex
@@ -63,6 +63,31 @@
 \end{frame}
 
 \begin{frame}
+ \frametitle{Formaci\'on del Poro}
+ \begin{figure}
+    \centering
+    \begin{tabular}{C{5cm} c}
+      \includegraphics[width=5cm]{Cap_3/Poro_900_94000light_100-400.png} &  \multirow{3}{*}{\includegraphics[width=1.2cm]{Cap_3/scale.png}}\\
+      \includegraphics[width=5cm]{Cap_3/Poro_900_96000light_100-400.png} & \\
+      \includegraphics[width=5cm]{Cap_3/Poro_900_98000light_100-400.png} & \\
+    \end{tabular}
+    \label{C3:fg:voidSeq}
+  \end{figure}
+  \begin{textblock*}{2cm}(1cm,3cm)
+      $\epsilon=14.4\%$
+  \end{textblock*}
+  \begin{textblock*}{2cm}(1cm,5.5cm)
+    $\epsilon=14.6\%$
+  \end{textblock*}
+  \begin{textblock*}{2cm}(1cm,8cm)
+    $\epsilon=14.8\%$
+  \end{textblock*}
+  \begin{textblock*}{4cm}(8.5cm,2.5cm)
+    Temperatura 900K
+  \end{textblock*}
+\end{frame}
+
+\begin{frame}
  \frametitle{Resultados de las aproximaciones}
  \begin{textblock*}{6cm}(0.5cm,1.5cm) 
     
@@ -124,31 +149,6 @@
  \begin{textblock*}{5cm}(6.8cm,6.7cm)
   \centering
    Disminuci\'on de los valores con el aumento de temperatura.
-  \end{textblock*}
-\end{frame}
-
-\begin{frame}
- \frametitle{Formaci\'on del void}
- \begin{figure}
-    \centering
-    \begin{tabular}{C{5cm} c}
-      \includegraphics[width=5cm]{Cap_3/Poro_900_94000light_100-400.png} &  \multirow{3}{*}{\includegraphics[width=1.2cm]{Cap_3/scale.png}}\\
-      \includegraphics[width=5cm]{Cap_3/Poro_900_96000light_100-400.png} & \\
-      \includegraphics[width=5cm]{Cap_3/Poro_900_98000light_100-400.png} & \\
-    \end{tabular}
-    \label{C3:fg:voidSeq}
-  \end{figure}
-  \begin{textblock*}{2cm}(1cm,3cm)
-      $\epsilon=14.4\%$
-  \end{textblock*}
-  \begin{textblock*}{2cm}(1cm,5.5cm)
-    $\epsilon=14.6\%$
-  \end{textblock*}
-  \begin{textblock*}{2cm}(1cm,8cm)
-    $\epsilon=14.8\%$
-  \end{textblock*}
-  \begin{textblock*}{4cm}(8.5cm,2.5cm)
-    Temperatura 900K
   \end{textblock*}
 \end{frame}
 
