--- a/Presentacion/Intro/Intro.tex
+++ b/Presentacion/Intro/Intro.tex
@@ -250,7 +250,7 @@
    \item Secuenciación de tareas.
    \item Ejecución de LAMMPS.
    \item Generación de gráficas ''publication-ready''.
-   \item Análisis estadístico, de Voronoi, y visual.
+   \item Análisis: visual, atómico, termodinámico.
   \end{enumerate}
  \end{textblock*}
 \end{frame}
